correct paths in .tx/config after git reorganization

--- a/.tx/config
+++ b/.tx/config
@@ -2,6 +2,6 @@
 host = https://www.transifex.net
 
 [katello.cli]
-file_filter = cli/locale/<lang>/katello-cli.po
-source_file = cli/po/keys.pot
+file_filter = locale/<lang>/katello-cli.po
+source_file = locale/keys.pot
 source_lang = en
